@@ -5,3 +5,4 @@ Makefile.in
 mercatortest
 testShader
 testTerrain
+testTerrainMod
